--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="swatch"></div>
             </div>
             <div id="note_area" class="lower">
-                <textarea id="note" cols="30" rows="10"></textarea>
+                <textarea id="note"></textarea>
             </div>
         </div>
 
